2004-08-01 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/XmlOutputter.h:
  * include/cppunit/tools/XmlDocument.h
  * src/cppunit/XmlDocument.cpp:
  * src/cppunit/XmlOutputter.cpp: integrated patch #997006 from Akos Maroy. 
    This patch makes the 'standalone' attribute in XML header optional.

2004-06-25 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/Portability.h: moved OStringStream alias definition to
    portability/Stream.h. User need to define EVC4 to indicate that 
    config-evc4.h should be used. (how to we detect this automatically ?).
    Notes that this means it might be needed to add #include <string> to some
    headers since its no longer included by Portability.h.

  * include/cppunit/portability/Stream.h: define alias OStringStream, stdCOut(), 
    and OFileStream. If CPPUNIT_NO_STREAM is defined (evc4 config), then provides
    our own implementation (based on sprintf and fwrite).

  * include/cppunit/config/config-evc4.h: config file for embedded visual c++ 4.
    Still need to detect for this platform in Portability.h (currently relying on
    EVC4 being defined...)

  * *.[cpp/h]: most source files have been impacted with the following change:
    #include <iostream> -> #include <cppunit/portability/Stream.h>
    std::ostream -> CPPUNIT_NS::OStream
    std::ofstream -> CPPUNIT_NS::OFileStream
    std::cout -> CPPUNIT_NS::stdCOut()
    std::endl -> "\n"
    Also, code using std::cin as been defined out if CPPUNIT_NO_STREAM was defined.
    The exact list of impact files can be obtain in CVS using tags:
    TG_CPPUNIT_NO_STREAM_BEFORE & TG_CPPUNIT_NO_STREAM_AFTER.

2004-06-19 Baptiste Lepilleur <gaiacrtn@free.fr>

  * cppunit.m4: patch #946302, AM_PATH_CPPUNIT doesn't report result 
    if CppUnit is missing.


2004-06-18 Baptiste Lepilleur <gaiacrtn@free.fr>

  * Release 10.0.2

  * include/cppunit/extension/TestSuiteBuilderContext.h:
  * src/cppunit/TestSuiteBuilderContext.cpp: fixed bug #921843. This bug