@@ -19,3 +19,4 @@ John Sisson
 Steven Mitter <smitter@iicm.tu-graz.ac.at>
 Stephan Stapel <stephan.stapel@web.de>
 Abdessattar Sassi <abdesassi@users.sourceforge.net> (hp-ux plug-in support)
+Max Quatember and Andreas Pfaffenbichler (VC++ 7 MFC TestRunner go to source line)
